レビュー指摘修正part1

--- a/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Practice.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Practice.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
